2012-04-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.decls:      [Bug 3508771]: Implement TkClipBox, Tk*Region and
	* generic/tkInt.decls:   Tk_GetHINSTANCE for Cygwin
	* generic/tkPlatDecls.h:
	* generic/tkintDecls.h:
	* generic/tkStubInit.c:
	* unix/tcl.m4:           For Cygwin, install tk84.dll in <prefix>/bin, not <prefix>/lib
	* unix/configure:
	* unix/Makefile.in:

2012-04-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkBind.c (ExpandPercents): [Bug 3520202]: Ensure that the
	%k, %K and %N substitutions use dummy tokens with <MouseWheel> events
	and that the %D subsitution is a dummy with <Key>/<KeyRelease>. This
	was causing significant indigestion (and a read of goodness knows what
	memory) to Tkinter/Python because of the way they map events between
	languages.

2012-04-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.tcl: Use vroot size in stead of screen size for
	clipping window coordinates in ::tk::PlaceWindow.
	* generic/dialog.tcl: Use ::tk::PlaceWindow in dialog.tcl, in
	stead of dumplicating the code there.
	(harmless part of [Bug 533519])

2012-04-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc: [Bug 3517448] TclKit build fails (unresolved
	__strtoi64)

2012-04-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBind.c: [Bug 3176239] control-MouseWheel causes segv

2012-03-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:        [Bug 3511806] Compiler checks too early
	* unix/configure.in:  This change allows to build the cygwin
	* unix/configure:     and mingw32 ports of Tcl/Tk to build
	* win/tcl.m4:         out-of-the-box using a native or cross-
	* win/configure.in:   compiler.
	* win/configure:

2012-03-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkColor.c:  [Bug 2809525] Abort on overlong color name.
	* unix/tkUnixColor.c:

2012-03-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/xcolors.c:   [RFE 3503317]: XParseColor speedup